# CVMaker

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  HANDOFF.md  Makefile  README.md  ROADMAP.md  compose.yaml  manage.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/templates/accounts/: login.html  signup.html
apps/core/: models.py
apps/cv/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/cv/migrations/: 0001_initial.py  0002_initial.py
apps/cv/templates/cv/: cvinfo_confirm_delete.html  cvlocale_form.html  cvsettings_confirm_delete.html  cvsettings_detail.html  detail.html  edit.html
apps/cv/templatetags/: cv_tags.py
apps/entries/: admin.py  forms.py  models.py  urls.py  views.py
apps/entries/migrations/: 0001_initial.py  0002_entry_translations.py
apps/entries/templates/entries/: form.html
apps/entries/templates/includes/: normal_fields.html  publication_fields.html
apps/entries/templatetags/: custom_filters.py
apps/rendering/: admin.py  apps.py  models.py  services.py  tasks.py  urls.py  views.py
apps/rendering/migrations/: 0001_initial.py
apps/rendering/templates/rendering/: _status.html
apps/sections/: forms.py  models.py  services.py  urls.py  views.py
apps/sections/migrations/: 0001_initial.py  0002_sectionentry_entry_fk.py
apps/sections/templates/sections/: detail.html  list.html
cvmaker/: db.sqlite3  dbOLD.sqlite3
cvmaker/accounts/: urls.py  views.py
cvmaker/cv/: admin.py  diagram.puml  forms.py  models.py  urls.py  views.py
cvmaker/cv/migrations/: 0001_initial.py  0002_cv_created_date_cv_modified_date_alter_cv_alias_and_more.py  0002_initial.py  0003_alter_cv_design_alter_cv_info_alter_cv_locale_and_more.py  0003_alter_cvdesign_theme.py  0003_remove_section_user.py  0004_alter_cvinfosection_section_and_more.py  0004_remove_cvinfo_data_file.py  0005_alter_cv_id.py  0006_alter_cvdesign_id_alter_cvinfo_id_alter_cvlocale_id_and_more.py
cvmaker/cv/templates/: cv_confirm_delete.html  cv_detail.html  cv_form.html  edit_cv_structure.html  section_form.html  section_order.html
cvmaker/cv/templates/cv/: cvdesign_confirm_delete.html  cvdesign_detail.html  cvdesign_form.html  cvdesign_list.html  cvinfo_detail.html  cvinfo_form.html  cvinfo_list.html  cvlocale_confirm_delete.html  cvlocale_detail.html  cvlocale_list.html  cvsettings_form.html  cvsettings_list.html  detail.html  edit.html  form.html  list.html
cvmaker/cv/templates/cv/includes/: cv_list_item.html
cvmaker/cv/templatesOLD/: cv_detail.html  cv_form.html  edit_cv_structure.html  entry_confirm_delete.html  entry_form.html
cvmaker/cv/templatetags/: cv_tags.py
cvmaker/cvmaker/: asgi.py  settings.py  urls.py  wsgi.py
cvmaker/entries/: admin.py  forms.py  models.py  urls.py  views.py
cvmaker/entries/migrations/: 0001_initial.py  0002_alter_bulletentry_alias_alter_educationentry_alias_and_more.py  0002_bulletentry_user_educationentry_user_and_more.py  0002_cventry_alias.py  0002_remove_bulletentry_alias_remove_bulletentry_id_and_more.py
cvmaker/entries/templates/entries/: detail.html  list.html  update.html
cvmaker/entries/templates/includes/: bullet_fields.html  education_fields.html  experience_fields.html  numbered_fields.html  oneline_fields.html  reversed_numbered_fields.html  text_fields.html
cvmaker/entries/templatetags/: custom_filters.py
cvmaker/media/: custom.yaml  custom_HjKWLzk.yaml  education_2.typ
cvmaker/media/RenderCV/output/: Natan_Sisoev_CV.typ
cvmaker/media/cvs/: test_dynamic.yaml
cvmaker/media/cvs/RenderCV/output/: Natan_Sisoev_CV.typ
cvmaker/media/cvs/rendercv_output/: Natan_Sisoev_CV.typ
cvmaker/sections/: forms.py  models.py  urls.py  views.py
cvmaker/sections/migrations/: 0001_initial.py  0002_alter_section_id.py  0003_alter_sectionentry_object_id.py
cvmaker/sections/templates/sections/: delete.html  detail.html  form.html  list.html
cvmaker/static/css/: app.css
cvmaker/templates/: base.html  baseOLD.html  home.html  homepage.html
cvmaker/templates/includes/: dashboard.html  footer.html  messages.html  nav.html
cvmaker/templates/registration/: login.html  signup.html
docker/: entrypoint.sh  web.Dockerfile  worker.Dockerfile
docs/: CURRENT_STATE.md  DESIGN.md
docs/adr/: 0001-project-structure.md  0004-custom-user-model.md  0005-entry-polymorphism.md  0006-per-entry-translations.md  0007-rendering-pipeline.md
docs/diagrams/: architecture.tex
scripts/: fix_phase1_lint.py  fix_rendercv_imports.py  phase1_migrate.ps1  phase2_1_migrate.ps1
src/cvmaker/: asgi.py  urls.py  wsgi.py
src/cvmaker/settings/: __init__.py  base.py  dev.py  prod.py  test.py
templates/: placeholder.html
templates/includes/: footer.html  nav.html
tests/: conftest.py  factories.py
tests/integration/: test_auth_flow.py  test_rendering_views.py  test_smoke.py
tests/unit/: test_entries.py  test_rendering.py  test_services.py  test_translations.py  test_user_model.py
